crates/keron-lang/tests/corpus/errors/parse/for_no_iterable.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `reconcile` is a reserved keyword
  --> 2:12
  |
2 | for x in { reconcile x }
  |            ^
